src/styles.css
:root {
  --primary: #312951;
  --secondary: #473d72;
  --light: #fafafd;
}

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

::selection {
  background-color: var(--primary);
  color: var(--light);
}

body {
  color: var(--primary);
  background-color: var(--primary);
  padding: 1rem;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
    sans-serif, Apple Color Emoji, Segoe UI Emoji;
}

input {
  width: 1.75rem;
  height: 1.75rem;
  padding: 0.25rem;
  margin: 0 0.75rem;
  background-color: transparent;
  border: 1px solid var(--secondary);
  border-radius: 50%;
  text-align: center;
}

.menu {
  padding: 2rem 2.25rem 1rem;
  margin: 0 auto;
  max-width: 50rem;
  background-color: var(--light);
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
}

@media (min-width: 660px) {
  .menu {
    display: grid;
    grid-gap: 4rem;
    grid-template-columns: 1fr 1fr;
  }
}

.menu-item {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}

.logo {
  width: 280px;
  margin: 0 auto 2rem;
  display: block;
  grid-column: 1 / 3;
}

@media (min-width: 660px) {
  .logo {
    margin-bottom: 0;
  }
}

.mains {
  grid-column: 1 / 2;
}

.mains-name {
  margin: 0;
  flex-grow: 1;
}

.mains-description {
  flex: 1 1 100%;
  margin: 0.75rem 0 0;
  color: var(--secondary);
}

.aside {
  grid-column: 0 / span 3;
  vertical-align: center;
}

.extras {
  color: var(--secondary);
}

.extras + .extras {
  margin-top: 1.5rem;
}

@media (min-width: 660px) {
  .extras + .extras {
    margin-top: 2.5rem;
  }
}

.extras .menu-item {
  margin-bottom: 0.75rem;
}

.extras-heading {
  margin: 0 0 1.5rem;
  border-bottom: 1px solid var(--secondary);
}

.extras-name {
  flex-grow: 1;
}

.total {
  grid-column: 1 / 3;
  margin-top: 2.5rem;
  padding: 0.75rem 0 1.25rem;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  position: sticky;
  bottom: 0;
  color: var(--secondary);
  background-color: var(--light);
  border-top: 1px solid var(--secondary);
  box-shadow: 0 -0.5rem 0.75rem 0.5rem var(--light);
}

@media (min-width: 660px) {
  .total {
    margin-top: 0;
  }
}

.total-title {
  margin: 0;
}

.total-price {
  font-size: 1.5rem;
}

.column {
  float: left;
  width: 50%;
}

.item-container {
  transition: box-shadow .3s;
  width: 100%;
  height: auto;
  padding: 10px;
  border-radius:10px;
}
.item-container:hover {
  box-shadow: 0 0 11px rgba(33,33,33,.2);
}


.button-container {
  text-align: right;
}

